fix header responsive on small screes Relates #62

--- a/client/src/Components/Header/Header.css
+++ b/client/src/Components/Header/Header.css
@@ -153,3 +153,23 @@ input[type=range]:focus::-ms-fill-lower {
 input[type=range]:focus::-ms-fill-upper {
     background: var(--main-color);
 }
+
+
+@media (max-width: 700px) {
+    header{
+        width: 100%;
+        flex-direction: column;
+        gap: 2rem;
+
+    }
+    .contianer {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+
+    :is(header) .search-div,.contianer,.price-div {
+        width: 100%;
+    }
+
+}
